--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: python
 python:
-    - "3.6"
+    - "3.8"
 install:
-    - pip install -r requirements.txt
+    - python -m pip install --upgrade pip
+    - python -m pip install --upgrade setuptools
+    - python -m pip install -r requirements.txt
 script:
     - pytest
