test travis without inits

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
     - python -m pip install -r requirements.txt
     - python -m pip install .
 script:
-    - pytest
+    - python -m pytest
