--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,10 @@
 [pytest]
 testpaths =
     tests
+    simuran
 norecursedirs=dist build .tox scripts
 addopts =
     --cov-report=xml
-    --cov=./
+    --cov=simuran
     -r a
     -v
