Update pytest settings

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,5 +6,6 @@ norecursedirs=dist build .tox scripts
 addopts =
     --cov-report=xml
     --cov=simuran
-    -r a
+    -r fEsP
     -v
+    --disable-warnings
