--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,8 @@ python:
 before_intall:
   - python --version
   - pip install -U pip
-  - pip install -U pytest
-  - pip install codecov
-  - pip install pytest-cov
 install:
-  - python -m pip install --upgrade setuptools
-  - python -m pip install -r requirements.txt
-  - python -m pip install .
+  - python -m pip install .[tests]
   - python -m pip install neurochat
 script:
   - python -m pytest
