--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ author_email = martins7@tcd.ie
 project_urls = 
     Bug Tracker = https://github.com/seankmartin/SIMURAN/issues
     Documentation = https://simuran.readthedocs.io
-classifiers = [
+classifiers =
     Intended Audience :: Education
     Intended Audience :: Science/Research
     Programming Language :: Python :: 3
@@ -23,7 +23,6 @@ classifiers = [
     Operating System :: Unix
     Operating System :: MacOS
     Operating System :: Windows
-]
 keywords = neuroscience, network, gui, api
 version = 0.0.1
 
@@ -32,7 +31,7 @@ zip_safe = False
 packages = find:
 include_package_data = True
 python_requires = >=3.7
-install_requires = [
+install_requires =
     matplotlib >= 3.0.2
     numpy >= 1.15.0
     skm_pyutils
@@ -45,7 +44,6 @@ install_requires = [
     pillow
     typer
     click-spinner
-]
 
 [options.package_data]
 * = *.txt, *.rst
@@ -54,7 +52,7 @@ install_requires = [
 neurochat = 
     neurochat
     astropy
-testing = 
+tests = 
     %(neurochat)s
     pytest
     pytest-cov
