--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,8 @@ zip_safe = False
 packages = find:
 include_package_data = True
 python_requires = >=3.7
+package_dir =
+    =src
 install_requires =
     matplotlib >= 3.0.2
     numpy >= 1.15.0
@@ -63,6 +65,10 @@ docs =
     sphinxcontrib-apidoc
     sphinx_rtd_theme
     pygments
+
+
+[options.packages.find]
+where = src
 
 [options.entry_points]
 console_scripts = 
