--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [tool.pytest.ini_options]
 testpaths = [
     "tests",
-    "simuran",
+    "src/simuran",
 ]
 norecursedirs="dist build .tox scripts"
 addopts = "--cov-report=xml --cov=simuran -r fEsP -v"
