--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - python --version
   - pip install -U pip
 install:
-  - python -m pip install .[tests]
+  - python -m pip install ".[tests]"
 script:
   - python -m pytest
 after_success:
