Test signals Create converters module to assist with this

--- a/setup.cfg
+++ b/setup.cfg
@@ -66,5 +66,4 @@ docs =
 
 [options.entry_points]
 console_scripts = 
-    simuran = simuran.main:typer_entry
-    simuran-ui = simuran.ui.simuran_ui:cli_entry
+    simuran = simuran.ui.simuran_ui:cli_entry
