--- a/setup.cfg
+++ b/setup.cfg
@@ -22,9 +22,9 @@ classifiers =
     Operating System :: POSIX
     Operating System :: Unix
     Operating System :: MacOS
-    Operating System :: Windows
+    Operating System :: Microsoft :: Windows
 keywords = neuroscience, network, gui, api
-version = 0.0.1
+version = 23.02.0
 
 [options]
 zip_safe = False
@@ -32,7 +32,6 @@ packages = find:
 include_package_data = True
 python_requires = >=3.7
 install_requires =
-    matplotlib >= 3.0.2
     numpy >= 1.15.0
     skm_pyutils
     seaborn
