--- a/.github/workflows/simuran-test.yml
+++ b/.github/workflows/simuran-test.yml
@@ -40,3 +40,5 @@ jobs:
         pytest
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
+      with:
+        token: ${{secrets.CODECOV_TOKEN}}
