--- a/.github/workflows/simuran-test.yml
+++ b/.github/workflows/simuran-test.yml
@@ -29,6 +29,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         pip install ".[tests]"
+        pip install codecov
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -39,6 +40,5 @@ jobs:
       run: |
         pytest
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{secrets.CODECOV_TOKEN}}
+      run: |
+        codecov -t ${{secrets.CODECOV_TOKEN}}
