--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -18,3 +18,8 @@ sphinx:
 python:
   install:
     - requirements: docs/requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
+  system_packages: true
